--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,10 +4,10 @@
 # postgresql
 spring.jpa.database=POSTGRESQL
 spring.datasource.platform=postgres
-spring.datasource.url=jdbc:postgresql://localhost:5432/salsa
-spring.datasource.username=rajeev
-spring.datasource.password=rajeev
+spring.datasource.url=jdbc:postgresql://localhost:5433/salsa
+spring.datasource.username=postgres
+spring.datasource.password=mamta
 
 # hibernate
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=create
